test/semantic_errors/binop_type_mismatch.lat
// Test: Type mismatch in binary operation
// Expected error: Type mismatch in binary operation

munus main() {
    x: integer = 1
    y: filum = "hello"
    z: integer = x + y
}
